<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brew Thumbs Up!</string>

    <string name="content_description">cd</string>

    <string name="default_font" translateable="false">Roboto.ttf</string>
    <string name="default_font_bold" translateable="false">Roboto-Bold.ttf</string>
    <string name="default_font_light" translateable="false">Roboto-Light.ttf</string>
    <string name="default_font_thin" translateable="false">Roboto-Thin.ttf</string>

    <string name="io_exception">An I/O exception occurred. Please try again.</string>

    <string name="about_text">Brew Thumbs Up! pairs newly released movies with beer in a very scientific manner. Beers
        are assigned based on the movie rating, so for lower movies you will get stronger beers. This should hopefully
        make it a bit easier to get through those rotten movies.
    </string>
    <string name="built_by_willowtree_apps">Built by WillowTree Apps</string>
    <string name="about_brew_thumbs_up">About Brew Thumbs Up!</string>

    <string name="popcorn_attribution">
        <a href="http://thenounproject.com/noun/popcorn/#icon-No4778" target="_blank">Popcorn</a>
        designed by
        <a href="http://thenounproject.com/tazu" target="_blank">andrei antonescu</a>
        from The Noun Project
    </string>
    <string name="tomato_attribution">
        <a href="http://thenounproject.com/noun/tomato/#icon-No25334" target="_blank">Tomato</a>
        designed by
        <a href="http://thenounproject.com/sspecter777" target="_blank">Pablo Tournelle</a>
        from The Noun Project
    </string>
</resources>
