<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <oak.widget.TextViewWithFont
        style="@style/Wrap"
        android:text="@string/about_text"
        android:textSize="11sp"
        oak:font="@string/default_font" />

    <oak.widget.TextViewWithFont
        style="@style/Wrap"
        android:id="@+id/version_text"
        android:textSize="11sp"
        oak:font="@string/default_font" />

    <ImageView
        style="@style/Wrap"
        android:id="@+id/attribution"
        android:src="@drawable/img_attribution"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/built_by_willowtree_apps" />
</LinearLayout>