<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <oak.widget.TextViewWithFont
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="36sp"
        oak:font="@string/default_font_light" />

    <oak.widget.TextViewWithFont
        android:id="@+id/rating_running_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        oak:font="@string/default_font_bold" />

    <oak.widget.TextViewWithFont
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        oak:font="@string/default_font" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <oak.widget.TextViewWithFont
            android:id="@+id/critic_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            oak:font="@string/default_font_bold" />

        <oak.widget.TextViewWithFont
            android:id="@+id/audience_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            oak:font="@string/default_font_bold" />
    </LinearLayout>

    <oak.widget.TextViewWithFont
        android:id="@+id/critics_consensus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        oak:font="@string/default_font" />
</LinearLayout>