<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/Match"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <oak.widget.TextViewWithFont
        android:id="@+id/brewery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/bottle"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@drawable/brewery_background"
        oak:font="@string/default_font_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/brewery"
        android:layout_alignLeft="@id/bottle"
        android:layout_alignRight="@id/bottle"
        android:layout_alignBottom="@id/brewery">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/holo_orange_dark" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <oak.widget.TextViewWithFont
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/bottle"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@drawable/beer_name_background"
        oak:font="@string/default_font_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/name"
        android:layout_alignLeft="@id/bottle"
        android:layout_alignRight="@id/bottle"
        android:layout_alignBottom="@id/name">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/holo_purple" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        style="@style/MatchHeight"
        android:id="@id/bottle"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/img_beer_bottle"
        android:scaleType="centerInside"
        android:contentDescription="@string/content_description" />

    <ImageView
        style="@style/Wrap"
        android:id="@+id/url"
        android:visibility="gone"
        android:layout_alignTop="@id/brewery"
        android:layout_alignBottom="@id/brewery"
        android:layout_alignLeft="@id/bottle"
        android:layout_alignRight="@id/bottle"
        android:scaleType="center"
        android:clickable="true"
        android:src="@drawable/ic_action_location_web_site_selector"
        android:contentDescription="@string/content_description" />

    <oak.widget.TextViewWithFont
        android:id="@+id/abv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bottle"
        android:layout_alignRight="@id/bottle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textSize="36sp"
        oak:font="@string/default_font_light" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/bottle"
        android:layout_below="@id/name"
        android:layout_marginLeft="15dp"
        android:scrollbars="none">

        <oak.widget.TextViewWithFont
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            oak:font="@string/default_font" />
    </ScrollView>
</RelativeLayout>